--- a/lomn.css
+++ b/lomn.css
@@ -1,247 +1,125 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
+
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Times New Roman", serif;
-  overflow-x: hidden;
+   padding: 0;
+   margin: 0;
+   box-sizing: border-box;
+   font-family: "Montserrat",Sans-Serif;
 }
-
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: auto;
-  padding: 1em;
-  background: linear-gradient(to right, rgba(0,0,0,1), rgba(255,255,255,1));
+:root {
+   --color-1 : #34D399;
+   --color-2 : #34D399;
+   --color-3 : #E0E7ED;
+   --color-4 : #9CA3AF;
+   --color-5 : #1F2E3D;
+   --color-6 : #121A21;
+   --color-7 : #2A3A4A;
+   --color-8 : #FBBF24;
+   
 }
-
-.logo, .menu a, .login {
-  background: linear-gradient(to left, black, white);
-  -webkit-background-clip: text;
-  color: transparent;
-  text-decoration: none;
+body, html {
+   height: 100%;
+   width: 100%;
+   overflow: auto;
 }
-
-.menu {
-  display: flex;
-  gap: 1em;
-  flex-wrap: wrap;
-  justify-content: center;
+body::before {
+   content: "";
+   background-image: url('/Bahan/pint04.jpg');
+   background-repeat: no-repeat;
+   background-size: cover;
+   position: center;
+   opacity: 0.3;
+   z-index: 10;
 }
-
-.login {
-  border: 2px solid rgba(255,255,255,0.5);
-  padding: 0.5em 1em;
-  border-radius: 25px;
-  transition: 0.3s;
-  white-space: nowrap;
+.topbar {
+   height: auto;
+   width: 100%;
+   justify-content: space-between;
+   background: var(--color-1);
+   padding: 7px;
+   display: flex;
 }
-
-.login:hover {
-  background-color: rgba(255,255,255,0.2);
+.topbar h4 {
+   height: clamp(7%, 8vh, 9%);
+   align-items: center;
+   display: flex;
+   gap: 10px;
 }
-
-.peng {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 1em;
+.mainlayout {
+   display: flex;
+   height: 100%;
+   width: 100%;
 }
-
-.pengl {
-  padding: 1.5em;
-  width: 100%;
-  border: solid 2px black;
+.sidebar {
+   display: flex;
+   flex-direction: column;
+   border: solid 3px black;
+   height: 100%;
+   width: clamp(180px, 20vw, 800px);
+   background-color: var(--color-5);
+   padding: 15px 5px 10px 15px;
+   list-style: none;
 }
-
-.pengl p, .kotakk {
-  margin-bottom: 1em;
+.logo {
+   height: 60px;
+   width: 60px;
+   border-radius: 50%;
 }
-
-.pengl h1 {
-  margin-bottom: 0.5em;
-  font-size: 1.5em;
+.mainmenu li, .othermenu li {
+   list-style: none;
+   padding: 8px 10px;
+   border: solid 1px black;
+   border-radius: 7px;
+   margin: 3px;
+   font-size: clamp(15px, 1vw, 20px);
 }
-
-.kotakk {
-  display: inline-block;
-  border: solid 3px black;
-  margin: 0 0.5em;
-  padding: 0.4em;
-  border-radius: 25px;
-  text-align: center;
-  font-size: 0.8em;
+#gap {
+   margin-right: 8px;
 }
-
-.kotakb {
-  display: flex;
-  border: solid 3px black;
-  margin-top: 1em;
-  padding: 0.4em;
-  border-radius: 25px;
-  text-align: center;
-  justify-content: center;
+.mainmenu {
+   gap: 5px;
+   margin: 0 0 4em 0;
 }
-
-.pengr {
-  width: 100%;
-  padding: 1em;
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  position: relative;
-  border: solid 3px black;
+.mainbar {
+   flex-grow: 1;
+   padding: 10px;
+   border: solid 3px black;
+   display: grid;
+   grid-template-columns: 23.75% 23.75% 23.75% 23.75%;
+   grid-template-rows: 0.5fr 1fr 2fr 2fr;
+   gap: 15px;
 }
-
-.cardb {
-  width: 7em;
-  height: 9em;
-  border: solid 3px black;
-  border-radius: 10px;
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  margin-top: 3em;
+#grid {
+   border: solid 1px black;
+   border-radius: 15px;
+   backdrop-filter: blur(4%);
+   box-shadow: 3px 3px 8px black;
+   display: flex;
+   flex-direction: column;
 }
-
-.pengr h4 {
-  position: absolute;
-  top: 0.5em;
-  left: 0.5em;
-  font-size: 0.9em;
+.ha1 {
+   grid-column: 1/5;
+   display: flex;
+   align-items: center;
+   padding: 0 0 0 3em;
+   font-size: clamp(10px, 2vw, 25px);
 }
-
-.sponsor {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 0.5em;
-  justify-content: space-around;
-  border: solid 2px black;
-  padding: 0.5em;
-  background: linear-gradient(to top, white, black);
-  margin-bottom: 1em;
+.grid1 {
+   
 }
-
-.sponsor p {
-  padding: 0.3em;
-  background: grey;
-  color: white;
-  border-radius: 30%;
-  font-size: 0.7em;
-  white-space: nowrap;
+.grid5 {
+   grid-column: 1/3;
+   grid-row: 3/4;
 }
-
-.carousel1 {
-  width: 100%;
-  position: relative;
-  border: solid 3px black;
-  height: auto;
-  min-height: 400px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
+.grid6 {
+   grid-column: 3/5;
+   grid-row: 3/4;
 }
-
-.carousel1 h1 {
-  text-align: center;
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100%;
-  padding: 1em;
+.grid7 {
+   grid-column: 1/3;
+   grid-row: 4/5;
 }
-
-.car1 {
-  flex: 0 0 250px; /* lebar tiap card */
-  height: 300px;
-  border: solid 2px black;
-  border-radius: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 1em;
-  background: white;
-  transition: transform 0.5s ease;
+.grid8 {
+   grid-column: 3/5;
+   grid-row: 4/5;
 }
-
-.hamburger {
-  display: none;
-  cursor: pointer;
-}
-
-.hamburger .line {
-  width: 30px;
-  height: 3px;
-  background-color: black;
-  margin: 5px 0;
-  display: block;
-}
-.car1 {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border: solid 2px black;
-  text-align: center;
-}
-
-
-@media (max-width: 767px) {
-  .menu {
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.9);
-    text-align: center;
-    padding: 1em 0;
-  }
-
-  .menu a {
-    padding: 0.7em;
-    display: block;
-    color: white;
-  }
-
-  .menu.active {
-    display: flex;
-  }
-
-  .hamburger {
-    display: block;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .navbar {
-    padding: 0 2em;
-  }
-
-  .menu {
-    gap: 1.5em;
-  }
-
-  .peng {
-    flex-direction: row;
-  }
-
-  .pengl, .pengr {
-    width: 100vw;
-    padding: 2em;
-  }
-
-  .sponsor {
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 1em 4px;
-  }
-
-  .sponsor p {
-    font-size: 0.8em;
-  }
