--- a/lomn.css
+++ b/lomn.css
@@ -21,23 +21,22 @@ body, html {
    height: 100%;
    width: 100%;
    overflow: auto;
-}
-body::before {
-   content: "";
-   background-image: url('/Bahan/pint04.jpg');
-   background-repeat: no-repeat;
-   background-size: cover;
-   position: center;
-   opacity: 0.3;
-   z-index: 10;
+   background-image: url('bege.jpg');
+   background-color: rgba(0,0,0,0.5);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  color: white;
 }
 .topbar {
-   height: auto;
+   height: clamp(50px, 4vw, 80px);
    width: 100%;
    justify-content: space-between;
-   background: var(--color-1);
-   padding: 7px;
+   align-items: center;
+   padding: 10px;
    display: flex;
+   position: sticky;
+   background-color: rgb(46,62,84,0.5);
 }
 .topbar h4 {
    height: clamp(7%, 8vh, 9%);
@@ -61,16 +60,17 @@ body::before {
    list-style: none;
 }
 .logo {
-   height: 60px;
-   width: 60px;
+   height: 40px;
+   width: 40px;
    border-radius: 50%;
+   margin: 5px;
 }
 .mainmenu li, .othermenu li {
    list-style: none;
    padding: 8px 10px;
    border: solid 1px black;
    border-radius: 7px;
-   margin: 3px;
+   margin: 10px;
    font-size: clamp(15px, 1vw, 20px);
 }
 #gap {
@@ -80,22 +80,28 @@ body::before {
    gap: 5px;
    margin: 0 0 4em 0;
 }
+.upmainbar {
+   display: flex;
+   height: 100%;
+   width: 100%;
+   position: relative;
+}
 .mainbar {
-   flex-grow: 1;
-   padding: 10px;
-   border: solid 3px black;
+   width: 100%;
+   height: 100%;
+   padding: clamp(5px, 18vw, 10px);
    display: grid;
-   grid-template-columns: 23.75% 23.75% 23.75% 23.75%;
+   grid-template-columns: 25% 25% 25% 25%;
    grid-template-rows: 0.5fr 1fr 2fr 2fr;
-   gap: 15px;
+   position: center;
 }
 #grid {
-   border: solid 1px black;
    border-radius: 15px;
-   backdrop-filter: blur(4%);
-   box-shadow: 3px 3px 8px black;
+   backdrop-filter: blur(20px) saturate(200%);
+   box-shadow: 0 0 8px rgba(255,255,255,0.4);
    display: flex;
    flex-direction: column;
+   margin: 10px;
 }
 .ha1 {
    grid-column: 1/5;
@@ -103,9 +109,6 @@ body::before {
    align-items: center;
    padding: 0 0 0 3em;
    font-size: clamp(10px, 2vw, 25px);
-}
-.grid1 {
-   
 }
 .grid5 {
    grid-column: 1/3;
@@ -122,4 +125,7 @@ body::before {
 .grid8 {
    grid-column: 3/5;
    grid-row: 4/5;
+}
+@media screen and (max-width: 800px) {
+   
 }
